@@ -1,5 +1,7 @@
 procps-3.0.0 --> procps-3.0.1
 
+sysctl handles net/ipv4/conf/eth1.0123/tag (VLAN interface)
+sysctl handles net.ipv4.conf.eth1/0123.tag (VLAN interface)
 "ps" is now about 2x faster than in procps-2.x.x
 "ps -F" now documented
 w works in KOI8-R locale
